# tea-techniques

./: .dockerignore  .env.docker  .env.example  .env.tailscale  .env.tailscale.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc.json  .pylintrc  .repomixignore  CI_CD_IMPLEMENTATION_SUMMARY.md  CLAUDE.local.md  CLAUDE.md  COMPREHENSIVE_TEST_IMPLEMENTATION_PLAN.md  CONTRIBUTING-TECHNIQUES.md  CONTRIBUTING.md  DATA-REFINEMENT-PLAN.md  DB_RESET.md  Dockerfile.dev  LICENSE  MIGRATION_PLAN.md  Makefile  NEW_TECHNIQUES.json  QUALITY_STANDARDS.md  README.md  REMOVED_TESTS_DOCUMENTATION.md  REPORT.md  REVIEW_FINDINGS.md  REVISED_COMPREHENSIVE_TEST_AND_QUALITY_PLAN.md  TASKS.md  TASK_LIST.md  TESTING.md  TESTING_CI_PLAN.md  biome.jsonc  debug-fetch.js  demo.json  deploy-tailscale.sh  dev.sh  docker-compose.azure.yaml  (+28 more)
.beads/: .migration-hint-ts  issues.jsonl
.husky/: pre-commit
TASKS/: migration-plan-v3.md  techniques_schema.json  techniques_v3.json  todos.md
api/: admin.py  api_urls.py  forms.py  serializers.py  urls.py  urls_html.py
app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
article/: README.md  formatting-header.tex  pandoc-config.yaml  references.bib  tea-techniques-article.aux  tea-techniques-article.md  tea-techniques-article.tex
backend/: .coverage  .coverage.987-JDV49XP6KK.34737.XJSrnYHx  .coverage.987-JDV49XP6KK.34737.XJgJJkzx  .dockerignore  .env.example  .pylintrc  API_TESTING.md  DOCKER_TESTING.md  Dockerfile  Dockerfile.production  api_test_log.txt  coverage.xml  entrypoint.production.sh  entrypoint.sh  factories_test_log.txt  init-db.sh  load_and_import.py  manage.py  model_test_log.txt  pylintrc  pyproject.toml  pyrightconfig.json  setup.py
backend/api/: MIGRATION_PLAN.md  MIGRATION_REQUIREMENTS.md  admin.py  api_urls.py  models.py  models_proposal.py  permissions.py  root_urls.py  serializers.py  services.py  urls.py  utils.py
backend/api/fixtures/: assurance_goals.json  categories.json  sub_categories.json  techniques.json  updated_techniques.json
backend/api/management/commands/: add_missing_columns.py  explainability_techniques.csv  import_techniques.py  import_techniques_csv.py  load_initial_data.py  reset_and_import_techniques.py  reset_database.py  tailscale_setup.py
backend/api/migrations/: 0001_initial.py  0002_alter_techniqueresource_publication_date.py  0002_remove_attributevalue_attribute_type_and_more.py  0003_convert_publication_date_to_date.py  0004_alter_technique_complexity_rating_and_more.py
backend/api/templatetags/: form_tags.py
backend/api/tests/: __init__.py  conftest.py  factories.py  test_api.py  test_error_handling.py  test_management_commands.py  test_models.py
backend/api/tests/api/: __init__.py  test_api_endpoints.py  test_authentication_permissions.py  test_error_handling_validation.py
backend/api/tests/integration/: test_cross_service_integration.py  test_database_transactions.py  test_management_commands.py
backend/api/tests/unit/admin/: test_admin.py
backend/api/tests/unit/management/: __init__.py  test_import_techniques_command.py
backend/api/tests/unit/models/: test_base_models.py  test_relationship_models.py  test_technique_model.py
backend/api/tests/unit/serializers/: test_serializers.py
backend/api/tests/unit/services/: test_services.py
backend/api/tests/unit/utils/: test_utils.py
backend/api/tests/unit/views/: __init__.py  test_api_views.py  test_auth_views.py
backend/api/views/: api_views.py  auth_views.py
backend/config/: azure_settings.py  production_settings.py  settings.py  settings_old.py  settings_sqlite.py  settings_sqlite_old.py  test_settings.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  docker.py  production.py  sqlite.py  sqlite_dev.py  test.py
backend/data/: BACKEND_MIGRATION_PLAN.md  BACKEND_PLAN.md  COMBINED_MIGRATION_PLAN.md  FRONTEND_MIGRATION_PLAN.md  FRONTEND_PLAN.md  REQUIREMENTS.md  data_validation.py  model-specific.json  pipeline.md  schema.json  techniques.csv  techniques.json  techniques.json.bak_20250407  techniques_schema.json  techniques_v2.csv  techniques_v3.csv  update_schema.py
backend/data/markdown/: explainability_techniques.md  fairness_techniques.md  md_to_fixtures.py  mdtable_parser.py
backend/data/research/: new-techniques.csv  suggested-attributes.md  techniques-extended.csv  techniques.csv  techniques_v2.csv  updated_schema.csv
backend/data/updated/: data_integrity.py
backend/data/validation_results/: latest_validation_results.csv  latest_validation_results.html  validation_results_2025-03-03_07-20-46.csv  validation_results_2025-03-03_07-20-46.html  validation_results_2025-03-13_06-39-47.csv  validation_results_2025-03-13_06-39-47.html
backend/data_archive/: api_views_proposal.py  serializers_proposal.py  unify.py
backend/requirements/: development.txt  production.txt
backend/rest_framework/: __init__.py  decorators.py  filters.py  permissions.py  request.py  response.py  serializers.py  status.py  viewsets.py
backend/scripts/: fix_fixtures.py  full_migration.py  generate_fixtures.py  generate_techniques.py  init_fixtures.py  reset_and_import.py  setup_dev.py
backend/tea_techniques.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
components/: app-header.tsx  app-sidebar.tsx  filter-table.tsx  lazy-technique-card.tsx  nav-main.tsx  nav-projects.tsx  nav-settings.tsx  nav-user.tsx  team-switcher.tsx  technique-card.tsx  techniques-columns.tsx  techniques-data-table.tsx  web-vitals.tsx
config/: settings.py  urls.py
docs/: API-GUIDE.md  CI-CD-PIPELINE.md  DATA-MANAGEMENT.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  DEVELOPMENT-WORKFLOW.md  DOCUMENTATION-GUIDE.md  FRONTEND-GUIDE.md  FUTURE-ROADMAP.md  GLOSSARY.md  MODEL-ARCHITECTURE.md  QUALITY_STANDARDS.md  TAG-DEFINITIONS.md  TAILSCALE-DEPLOYMENT.md  TECHNIQUE-EVALUATION-CRITERIA copy.md  TECHNIQUE-EVALUATION-CRITERIA.md  TESTING.md  USER-GUIDE.md  validation-guide.md
frontend/: .dockerignore  .env.sample  .eslintrc.json  .gitignore  .lighthouserc.json  Dockerfile  Dockerfile.production  (+17 more)
(+982 files in other folders)
