[tool.poetry]
name = "tea-techniques"
version = "0.1.0"
description = ""
authors = ["Christopher Burr <chrisdburr@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pandas = "^2.2.3"
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.1"
markdown = "^3.7"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
html5lib = "^1.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-extensions = "^3.2.3"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.15.0"
psycopg = "^3.2.5"
django-cors-headers = "^4.7.0"
drf-yasg = "^1.21.9"
whitenoise = "^6.6.0"
bs4 = "^0.0.2"
requests = "^2.32.3"
jsonschema = "^4.23.0"
django-debug-toolbar = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-django = "^4.8.0"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
faker = "^23.1.0"
mypy = "^1.9.0"
django-stubs = "^4.2.7"
djangorestframework-stubs = "^3.14.5"
types-requests = "^2.32.0.20240420"
types-markdown = "^3.5.0.20240412"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_sqlite"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["api/tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
